--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Merge Wonder Park</title>
-    <link rel="icon" href="image/favicon-500x500.png" />
+    <link rel="icon" href="image/favicon-500x500 (1).png" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
